envio modelo conceptual ok

--- a/src/content_scripts/sidebar/index.html
+++ b/src/content_scripts/sidebar/index.html
@@ -34,6 +34,7 @@
 	<script src="js/controllers/ResultsSelectionController.js"></script>
 	<script src="js/controllers/ResultsPropertiesController.js"></script>
 	<script src="js/controllers/EndOfProcess.js"></script>
+    <script src="js/controllers/SelectProductPropertiesController.js"></script>
 </head>
 
 <body data-ng-app="ServiceCreator" class="">
