--- a/src/content_scripts/sidebar/existing-templates-ckecking.html
+++ b/src/content_scripts/sidebar/existing-templates-ckecking.html
@@ -28,7 +28,7 @@
                 <span type="button" class="close" data-dismiss="alert">
                     <span class="glyphicon glyphicon-info-sign"></span>
                 </span>
-                <p>The following products have been defined for this page. You can get the products of each product or delete one.</p>
+                <p>The following products have been defined for this page. You can get the comments of each product or delete one.</p>
             </div>
             <div id="existing_products" class="list-group"></div>
 	    </form>
